--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,11 @@ DB_PORT=5432
 DB_USER=user
 DB_PASSWORD=pass
 DB_NAME=clipefy
+
+# S3 / MinIO
+S3_ENDPOINT=http://localhost:9000
+S3_REGION=us-east-1
+S3_BUCKET=clipefy
+S3_ACCESS_KEY_ID=minioadmin
+S3_SECRET_ACCESS_KEY=minioadmin
+S3_FORCE_PATH_STYLE=true
