--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.1",
-    "typeorm": "^0.3.27"
+    "typeorm": "^0.3.27",
+    "@aws-sdk/client-s3": "^3.678.0",
+    "multer": "1.4.5-lts.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "2.4.6",
@@ -33,6 +35,7 @@
     "@types/node": "^22.9.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "@types/multer": "1.4.12"
   }
 }
