--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.27",
     "@aws-sdk/client-s3": "^3.678.0",
-    "multer": "1.4.5-lts.1"
+    "multer": "1.4.5-lts.1",
+    "@aws-sdk/s3-request-presigner": "^3.678.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "2.4.6",
